assets/thanos-ruler/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/description: |-
      Expose the Thanos Ruler web server within the cluster on the following ports:
      * Port 9091 provides access to all Thanos Ruler endpoints. Granting access requires binding a user to the `cluster-monitoring-view` cluster role.
      * Port 9092 provides access to the `/metrics` endpoint only. This port is for internal use, and no other usage is guaranteed.

      This also exposes the gRPC endpoints on port 10901. This port is for internal use, and no other usage is guaranteed.
    service.beta.openshift.io/serving-cert-secret-name: thanos-ruler-tls
  labels:
    app.kubernetes.io/component: rule-evaluation-engine
    app.kubernetes.io/instance: thanos-ruler
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: thanos-rule
    app.kubernetes.io/part-of: openshift-monitoring
    app.kubernetes.io/version: 0.42.4
  name: thanos-ruler
  namespace: openshift-user-workload-monitoring
spec:
  ports:
  - name: web
    port: 9091
    targetPort: web
  - name: metrics
    port: 9092
    targetPort: metrics
  - name: grpc
    port: 10901
    targetPort: grpc
  selector:
    app.kubernetes.io/name: thanos-ruler
    thanos-ruler: user-workload
  sessionAffinity: ClientIP
  type: ClusterIP
