assets/thanos-ruler/route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    capability.openshift.io/name: OptionalMonitoring
    openshift.io/description: Expose the `/api` endpoints of the `thanos-ruler` service via a router.
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: thanos-ruler
  namespace: openshift-user-workload-monitoring
spec:
  path: /api
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: thanos-ruler
