assets/thanos-ruler/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: thanos-ruler
  namespace: openshift-user-workload-monitoring
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 9091
      protocol: TCP
    - port: 9092
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: thanos-querier
          app.kubernetes.io/name: thanos-query
          app.kubernetes.io/part-of: openshift-monitoring
    ports:
    - port: 10901
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: thanos-ruler
      app.kubernetes.io/part-of: openshift-monitoring
  policyTypes:
  - Ingress
  - Egress
